Deposit command returns successful message when deposit is done